# pi-BEM

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  annotated.html  annotated_dup.js  ass__leg__function_8cc.html  ass__leg__function_8cc_source.html  ass__leg__function_8h.html  ass__leg__function_8h.js  ass__leg__function_8h_source.html  bem__fma_8cc.html  bem__fma_8cc.js  bem__fma_8cc_source.html  bem__fma_8h.html  bem__fma_8h.js  bem__fma_8h_source.html  bem__problem_8cc.html  bem__problem_8cc.js  bem__problem_8cc_source.html  bem__problem_8h.html  bem__problem_8h.js  bem__problem_8h_source.html  bem__problem__access_8h.html  bem__problem__access_8h.js  bem__problem__access_8h_source.html  boundary__conditions_8cc.html  boundary__conditions_8cc.js  boundary__conditions_8cc_source.html  boundary__conditions_8h.html  boundary__conditions_8h.js  boundary__conditions_8h_source.html  cached__nurbs__patch__manifold_8cc.html  cached__nurbs__patch__manifold_8cc.js  cached__nurbs__patch__manifold_8cc_source.html  cached__nurbs__patch__manifold_8h.html  cached__nurbs__patch__manifold_8h.js  cached__nurbs__patch__manifold_8h_source.html  class_ass_leg_function-members.html  class_ass_leg_function.html  (+240 more)
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
NACA_CAD_FILES/: Color_2.iges  Color_3.iges  Color_4.iges  Curve_2.iges
NACA_FILES/: Color_1.iges  Curve_1.iges  naca0012.inp  parameter_bem.prm
docker/: Dockerfile
docker/debug/: Dockerfile
docker/debug-release/: Dockerfile
docker/release/: Dockerfile
docs/: Doxyfile
grids/: coarse_cube_double_nodes.inp  coarse_sphere_double_nodes.inp  coarse_straight_cube.inp  sphere.inp
include/: ass_leg_function.h  bem_fma.h  bem_problem.h  bem_problem_access.h  boat_surface.h  boundary_conditions.h  cached_nurbs_patch_manifold.h  computational_domain.h  constrained_matrix.h  driver.h  laplace_kernel.h  local_expansion.h  local_expansion_coeff.h  min_bem_operator.h  multipole_expansion.h  my_manifold_lib.h  my_utilities.h  octree_block.h  ode_argument.h  preconditioner.h  preconditioner_bem.h  singular_kernel_integral.h  step_fma.h  time_integrator.h  true_constrained_matrix.h
scripts/: build_documentation.sh  check_indentation.sh  check_test  docker.sh  dr.sh  indent  run_docker.sh  run_travis_commands.sh  script_convergence_global.sh  script_convergence_local.sh  script_threads.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+240 more)
source/: ass_leg_function.cc  bem_fma.cc  bem_problem.cc  boundary_conditions.cc  cached_nurbs_patch_manifold.cc  computational_domain.cc  driver.cc  exp_example.cc.tmp  local_expansion.cc  local_expansion_coeff.cc  main.cc  min_bem_operator.cc  multipole_expansion.cc  my_manifold_lib.cc  my_utilities.cc  octree_block.cc  preconditioner.cc  preconditioner_bem.cc  singular_kernel_integral.cc  step_fma.cc
tests/: CMakeLists.txt  cad_import_and_curvature_refinement.cc  cad_import_and_curvature_refinement.nooutput  hypersingular_integral.cc  hypersingular_integral.output  hypersingular_integral_curved_cell.cc  hypersingular_integral_curved_cell.output  local_expansion_copy.cc  local_expansion_copy.output  local_expansion_creation_and_evaluation.cc  local_expansion_creation_and_evaluation.output  local_expansion_translation.cc  multipole_expansion_copy.cc  multipole_expansion_copy.output  multipole_expansion_creation_and_evaluation.cc  multipole_expansion_creation_and_evaluation.output  multipole_expansion_creation_and_evaluation_neumann_kernel.cc  multipole_expansion_creation_and_evaluation_neumann_kernel.output  multipole_expansion_translation.cc  multipole_expansion_translation.output  parameter_cad_import_and_curvature_refinement.prm  parameters_conv_sphere.prm  strongly_singular_integral.cc  strongly_singular_integral.output  template.cc  test_minimal_step.cc  test_minimal_step.output  tests.h  vectorial_dof_handler_64_bits.cc  vectorial_dof_handler_64_bits.with_64bit_indices=true.output
tests/testData/: Revolution_1.iges
utilities/: coarse_cube.inp  coarse_cube_double_nodes.inp  cosine.inp
